[metadata]
name = django-joplin_vieweb
version = 0.1
description = A Django app to view your Joplin notes online.
long_description = file: README.rst
url = https://github.com/gri38/joplin-vieweb
author = gri38
author_email = onzeweb@zaclys.net
license = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.3
    Intended Audience :: Developers, users
    License :: OSI Approved :: WTF License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    httpx>=0.18.1
    Markdown>=3.3.4