[metadata]
name = django-joplin_vieweb
version = 1.8.1
author = gri38
author_email = onzeweb@zaclys.net
description = A Django app to view your Joplin notes online.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gri38/django-joplin_vieweb
project_urls =
    Bug Tracker = https://github.com/gri38/django-joplin_vieweb/issues
classifiers =
    Framework :: Django
    Framework :: Django :: 3.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    httpx>=0.18.1
    Markdown>=3.3.4
    Pygments>=2.9.0
    beautifulsoup4>=4.9.3